# local-translator

./: .gitignore  01d-local-audio-kokoro.py  Licence.md  README.md  main.py  pyproject.toml
